--- a/index.html
+++ b/index.html
@@ -1,170 +1,178 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Colorado Masters Race Project</title>
-    <link rel="icon" type="image/svg+xml" href="runner-favicon.svg" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="theme-toggle" aria-label="Theme selector">
-      <div class="segmented" role="tablist" aria-label="Theme">
-        <button id="theme-dark" class="seg-btn active" role="tab" aria-selected="true" type="button">🌙 Dark</button>
-        <button id="theme-light" class="seg-btn" role="tab" aria-selected="false" type="button">☀️ Light</button>
-      </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Colorado Masters Race Project</title>
+  <link rel="icon" type="image/svg+xml" href="runner-favicon.svg" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="theme-toggle" aria-label="Theme selector">
+    <div class="segmented" role="tablist" aria-label="Theme">
+      <button id="theme-dark" class="seg-btn active" role="tab" aria-selected="true" type="button">🌙 Dark</button>
+      <button id="theme-light" class="seg-btn" role="tab" aria-selected="false" type="button">☀️ Light</button>
     </div>
-    <header>
-      <h1 class="title">Colorado Masters Race Project</h1>
-      <p class="subtitle">Aggregated results for Colorado Masters track races</p>
-    </header>
+  </div>
+  <header>
+    <h1 class="title">Colorado Masters Race Project</h1>
+    <p class="subtitle">Aggregated results for Colorado Masters track races</p>
+  </header>
 
-    <main>
-      <div class="top-right">
-        <a href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank" rel="noopener noreferrer">Recent changes</a>
+  <main>
+    <div class="top-right">
+      <a href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank"
+        rel="noopener noreferrer">Recent changes</a>
+    </div>
+    <section class="card" aria-labelledby="overview-title">
+      <div class="card-content">
+        <div class="card-header">
+          <h2 id="overview-title" class="section-title" style="margin: 0;"><span class="dot"></span>Overview</h2>
+          <div class="perf-inline" aria-label="Performances summary">
+            <span class="label">Performances</span>
+            <span class="sep">·</span>
+            <span class="all">
+              <span class="value" id="perf-total">—</span>
+              <span class="label">ALL</span>
+            </span>
+            <span class="sep">·</span>
+            <span class="male">
+              <span class="value" id="perf-male">—</span>
+              <span class="label">M</span>
+            </span>
+            <span class="sep">·</span>
+            <span class="female">
+              <span class="value" id="perf-female">—</span>
+              <span class="label">F</span>
+            </span>
+            <span id="perf-breakdown" class="hidden"></span>
+          </div>
+        </div>
+        <div class="stats-grid" role="list">
+          <div class="stat" role="listitem">
+            <div class="stat-label"><span class="pill">Meets/Races</span></div>
+            <div class="stat-value" id="meets-races">—</div>
+          </div>
+
+          <div class="stat" role="listitem">
+            <div class="stat-label"><span class="pill">Earliest Race</span></div>
+            <div class="stat-value nowrap" id="race-earliest">—</div>
+          </div>
+
+          <div class="stat" role="listitem">
+            <div class="stat-label"><span class="pill">Most Recent</span></div>
+            <div class="stat-value nowrap" id="race-latest">—</div>
+          </div>
+        </div>
+        <div class="loading" id="loading">Loading data…</div>
+        <div class="error hidden" id="error">Failed to load data. Please try again later.</div>
+        <div class="footer-note">This is an unofficial, preliminary list and will be updated over time as more data is
+          added. It is a created by volunteers on a 'best efforts' basis from <a class="inline-link"
+            href="sources.html">public data sources</a>.</div>
+
+        <div id="local-picker" class="hidden" style="margin-top:16px;">
+          <label style="display:block; margin-bottom:8px; color: var(--muted); font-size: 13px;">Open locally without a
+            server: select <code>outdoor-track-data.csv</code></label>
+          <input id="csv-file-input" type="file" accept=".csv,text/csv" />
+          <div class="footer-note">This fallback is only needed when opening the page via <code>file://</code>. On
+            GitHub Pages or a local server, the CSV loads automatically.</div>
+        </div>
       </div>
-      <section class="card" aria-labelledby="overview-title">
-        <div class="card-content">
-          <div class="card-header">
-            <h2 id="overview-title" class="section-title" style="margin: 0;"><span class="dot"></span>Overview</h2>
-            <div class="perf-inline" aria-label="Performances summary">
-              <span class="label">Performances</span>
-              <span class="sep">·</span>
-              <span class="all">
-                <span class="value" id="perf-total">—</span>
-                <span class="label">ALL</span>
-              </span>
-              <span class="sep">·</span>
-              <span class="male">
-                <span class="value" id="perf-male">—</span>
-                <span class="label">M</span>
-              </span>
-              <span class="sep">·</span>
-              <span class="female">
-                <span class="value" id="perf-female">—</span>
-                <span class="label">F</span>
-              </span>
-              <span id="perf-breakdown" class="hidden"></span>
-            </div>
+    </section>
+
+    <section id="leaderboard-card" class="card" aria-labelledby="leaderboard-title" style="margin-top: 20px;">
+      <div class="card-content">
+        <div class="card-header">
+          <h2 id="leaderboard-title" class="section-title" style="margin: 0;">
+            <span class="dot"></span>Records
+          </h2>
+          <div class="segmented" role="tablist" aria-label="Gender filter">
+            <button id="btn-male" class="seg-btn active" role="tab" aria-selected="true" type="button">Male</button>
+            <button id="btn-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
+            <button id="btn-custom" class="seg-btn" role="tab" aria-selected="false" type="button">Custom ages</button>
           </div>
-          <div class="stats-grid" role="list">
-            <div class="stat" role="listitem">
-              <div class="stat-label"><span class="pill">Meets/Races</span></div>
-              <div class="stat-value" id="meets-races">—</div>
-            </div>
-
-            <div class="stat" role="listitem">
-              <div class="stat-label"><span class="pill">Earliest Race</span></div>
-              <div class="stat-value nowrap" id="race-earliest">—</div>
-            </div>
-
-            <div class="stat" role="listitem">
-              <div class="stat-label"><span class="pill">Most Recent</span></div>
-              <div class="stat-value nowrap" id="race-latest">—</div>
-            </div>
-          </div>
-          <div class="loading" id="loading">Loading data…</div>
-          <div class="error hidden" id="error">Failed to load data. Please try again later.</div>
-          <div class="footer-note">This is an unofficial, preliminary list and will be updated over time as more data is added. It is a created by volunteers on a 'best efforts' basis from <a class="inline-link" href="sources.html">public data sources</a>.</div>
-
-          <div id="local-picker" class="hidden" style="margin-top:16px;">
-            <label style="display:block; margin-bottom:8px; color: var(--muted); font-size: 13px;">Open locally without a server: select <code>outdoor-track-data.csv</code></label>
-            <input id="csv-file-input" type="file" accept=".csv,text/csv" />
-            <div class="footer-note">This fallback is only needed when opening the page via <code>file://</code>. On GitHub Pages or a local server, the CSV loads automatically.</div>
+          <div class="control-row" style="margin-top: 12px;">
+            <label class="toggle-container">
+              <input type="checkbox" id="one-per-athlete" />
+              <span class="toggle-slider"></span>
+              <span class="toggle-label">1 per athlete</span>
+            </label>
           </div>
         </div>
-      </section>
+        <div class="control-row" style="margin-bottom:12px;">
+          <label for="event-select" class="footer-note" style="margin: 0 8px 0 0;">Event</label>
+          <select id="event-select" class="input" style="min-width: 260px;">
+            <option value="" selected disabled>Select an event…</option>
+          </select>
+        </div>
+        <div id="age-leaderboard" class="age-grid"></div>
 
-      <section id="leaderboard-card" class="card" aria-labelledby="leaderboard-title" style="margin-top: 20px;">
-        <div class="card-content">
-          <div class="card-header">
-            <h2 id="leaderboard-title" class="section-title" style="margin: 0;">
-              <span class="dot"></span>Records
-            </h2>
-            <div class="segmented" role="tablist" aria-label="Gender filter">
-              <button id="btn-male" class="seg-btn active" role="tab" aria-selected="true" type="button">Male</button>
-              <button id="btn-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
-              <button id="btn-custom" class="seg-btn" role="tab" aria-selected="false" type="button">Custom ages</button>
-            </div>
-            <div class="control-row" style="margin-top: 12px;">
-              <label class="toggle-container">
-                <input type="checkbox" id="one-per-athlete" />
-                <span class="toggle-slider"></span>
-                <span class="toggle-label">1 per athlete</span>
-              </label>
-            </div>
-          </div>
-          <div class="control-row" style="margin-bottom:12px;">
-            <label for="event-select" class="footer-note" style="margin: 0 8px 0 0;">Event</label>
-            <select id="event-select" class="input" style="min-width: 260px;">
-              <option value="" selected disabled>Select an event…</option>
-            </select>
-          </div>
-          <div id="age-leaderboard" class="age-grid"></div>
+        <div id="event-chart" class="chart hidden" aria-label="Best time by age (per event)"></div>
 
-          <div id="event-chart" class="chart hidden" aria-label="Best time by age (per event)"></div>
-
-          <div id="custom-panel" class="custom-panel hidden" aria-labelledby="custom-title">
-            <h3 id="custom-title" class="section-title" style="margin-top: 8px; font-size: 16px;">
-              <span class="dot"></span>Analyze by custom ages
-            </h3>
-            <div class="range-controls">
-              <div class="range-row">
-                <label class="footer-note">Age range</label>
-                <div class="range-inputs">
-                  <input id="age-min" type="range" min="30" max="100" value="30" step="1" />
-                  <input id="age-max" type="range" min="30" max="100" value="100" step="1" />
-                </div>
-                <div class="range-values">
-                  <span>Min age: <strong id="age-min-val">30</strong></span>
-                  <span>Max age: <strong id="age-max-val">100</strong></span>
-                </div>
+        <div id="custom-panel" class="custom-panel hidden" aria-labelledby="custom-title">
+          <h3 id="custom-title" class="section-title" style="margin-top: 8px; font-size: 16px;">
+            <span class="dot"></span>Analyze by custom ages
+          </h3>
+          <div class="range-controls">
+            <div class="range-row">
+              <label class="footer-note">Age range</label>
+              <div class="range-inputs">
+                <input id="age-min" type="range" min="30" max="100" value="30" step="1" />
+                <input id="age-max" type="range" min="30" max="100" value="100" step="1" />
               </div>
-
-              <div class="range-row" style="margin-top: 10px;">
-                <label class="footer-note">Gender</label>
-                <div class="segmented small" role="tablist" aria-label="Custom gender filter">
-                  <button id="cgen-all" class="seg-btn active" role="tab" aria-selected="true" type="button">All</button>
-                  <button id="cgen-male" class="seg-btn" role="tab" aria-selected="false" type="button">Male</button>
-                  <button id="cgen-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
-                </div>
-                <button id="analyze-btn" class="button" type="button" style="margin-left:auto;">Analyze</button>
+              <div class="range-values">
+                <span>Min age: <strong id="age-min-val">30</strong></span>
+                <span>Max age: <strong id="age-max-val">100</strong></span>
               </div>
             </div>
 
-            <div id="custom-results" class="table-container hidden" style="margin-top:14px;">
-              <ul class="mini-list" id="custom-results-list" style="margin:0; padding:12px;"></ul>
-            </div>
-
-            <div id="custom-histogram" class="histogram hidden" aria-label="Time distribution">
-              <div class="hist-bars"></div>
-              <div class="hist-axis"></div>
+            <div class="range-row" style="margin-top: 10px;">
+              <label class="footer-note">Gender</label>
+              <div class="segmented small" role="tablist" aria-label="Custom gender filter">
+                <button id="cgen-all" class="seg-btn active" role="tab" aria-selected="true" type="button">All</button>
+                <button id="cgen-male" class="seg-btn" role="tab" aria-selected="false" type="button">Male</button>
+                <button id="cgen-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
+              </div>
+              <button id="analyze-btn" class="button" type="button" style="margin-left:auto;">Analyze</button>
             </div>
           </div>
-        </div>
-      </section>
 
-      <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
-        <div class="card-content">
-          <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
-          <div class="search-row">
-            <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
-            <button id="search-btn" class="button" type="button">Search</button>
-            <div id="search-hint" class="footer-note">Full or partial match, case-insensitive.</div>
+          <div id="custom-results" class="table-container hidden" style="margin-top:14px;">
+            <ul class="mini-list" id="custom-results-list" style="margin:0; padding:12px;"></ul>
           </div>
-          <div id="results-summary" class="subtitle" style="margin-top: 10px;"></div>
-          <div id="results-table" class="table-container"></div>
-        </div>
-      </section>
-    </main>
 
-    <!-- Papa Parse for robust CSV parsing -->
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-    <script defer src="app.js"></script>
-  </body>
+          <div id="custom-histogram" class="histogram hidden" aria-label="Time distribution">
+            <div class="hist-bars"></div>
+            <div class="hist-axis"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
+      <div class="card-content">
+        <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
+        <div class="search-row">
+          <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
+          <button id="search-btn" class="button" type="button">Search</button>
+          <div id="search-hint" class="footer-note">Full or partial match, case-insensitive.</div>
+        </div>
+        <div id="results-summary" class="subtitle" style="margin-top: 10px;"></div>
+        <div id="results-table" class="table-container"></div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Papa Parse for robust CSV parsing -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script defer src="app.js"></script>
+</body>
+
 </html>
